IGU-460 fixed styling issue with issue edit dropdown
-> the dropdown was overlapped by the issue tags

--- a/src/common/scss/style.scss
+++ b/src/common/scss/style.scss
@@ -262,7 +262,6 @@ input.tags[type="checkbox"] {
 
 .issue-body div a {
 	position:relative;
-	z-index: 1001;
 }
 
 .issue-title {
